# vimos

./: LICENSE  README.md  indicator.html  keybindings.md  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.github/workflows/: release.yml
docs/: cli.md  keybindings.md
src/: indicator.tsx  log.ts  settings.css  settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_suppress.rs  test_suppress_raw.rs
src-tauri/icons/: README.md
src-tauri/src/: cli.rs  ipc.rs  lib.rs  main.rs  updater.rs
src-tauri/src/commands/: indicator.rs  mod.rs  settings.rs  updater.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/keyboard/: capture.rs  inject.rs  keycode.rs  mod.rs  permission.rs
src-tauri/src/nvim_edit/: accessibility.rs  browser_scripting.rs  mod.rs  session.rs  terminal.rs
src-tauri/src/nvim_edit/terminals/: alacritty.rs  applescript_utils.rs  ghostty.rs  iterm.rs  kitty.rs  mod.rs  process_utils.rs  terminal_app.rs  wezterm.rs
src-tauri/src/vim/: commands.rs  mod.rs  modes.rs  state.rs
src-tauri/src/vim/state/: action.rs  mod.rs  normal_mode.rs  visual_mode.rs
src-tauri/src/vim/state/normal_mode/: mod.rs  motions.rs  operators.rs  text_objects.rs
src-tauri/src/window/: indicator.rs  mod.rs
src/components/: AppList.tsx  GeneralSettings.tsx  IgnoredAppsSettings.tsx  IndicatorSettings.tsx  NvimEditSettings.tsx  SettingsApp.tsx  WidgetSettings.tsx
src/indicator/: Indicator.tsx  types.ts  windowPosition.ts
