[package]
name = "ti-vim-rust"
version = "0.1.0"
description = "System-wide Vim mode for macOS"
authors = ["tonis"]
edition = "2021"
default-run = "ti-vim-rust"

[lib]
name = "ti_vim_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ti-vim"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS frameworks for keyboard capture
core-graphics = "0.25"
core-foundation = "0.10"

# Async runtime
tokio = { version = "1", features = ["sync", "rt", "net", "io-util", "macros"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Directories
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
warnings = "deny"
unused = "deny"

[lints.clippy]
all = "deny"
# Selectively enable useful pedantic lints
needless_pass_by_ref_mut = "deny"
